--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.1",
     "web-vitals": "^2.1.4"
